# ngff-rfc8-collection-examples

./: .gitignore  README.md  pyproject.toml
mobie/: image_labels_table.json
plain/: base_multiscale_collection.json
plain/external_collection/: child_collection.json  inlined_collection.json  parent_collection.json  resolved_collection.json
scripts/: collections_1.py  multiscale_1.py  multiscale_2.py  single_scale_1.py
scripts/gen_collections/basic_collection.zarr/: zarr.json
scripts/gen_collections/basic_collection.zarr/multiscale_1/: zarr.json
scripts/gen_collections/basic_collection.zarr/multiscale_1/0/: zarr.json
scripts/gen_collections/basic_collection.zarr/multiscale_2/: zarr.json
scripts/gen_collections/basic_collection.zarr/multiscale_2/1/: zarr.json
scripts/gen_collections/basic_collection.zarr/multiscale_2/2/: zarr.json
scripts/gen_multiscales/consolidated_multiscale.zarr/: zarr.json
scripts/gen_multiscales/distributed_multiscale.zarr/: zarr.json
scripts/gen_multiscales/distributed_multiscale.zarr/0/: zarr.json
scripts/gen_multiscales/distributed_multiscale.zarr/1/: zarr.json
scripts/gen_multiscales/distributed_multiscale.zarr/2/: zarr.json
scripts/gen_single_scale/stand_alone_single_scale.zarr/: zarr.json
src/ngff_rfc8_collection_examples/: collection.py  common.py  multiscale.py  pydantic_tools.py  single_scales.py
webknossos/: inline-multiscale.json
