[project]
authors = [{ name = "rfc8 authors", email = "lorenzo.cerrone@uzh.ch" }]
dependencies = ["zarr", "pydantic", "notebook"]
name = "ngff-rfc8-collection-examples"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
ngff_rfc8_collection_examples = { path = ".", editable = true }

[tool.pixi.tasks]
